test2/local/hello-injected-1cpu-1g.yaml
# Base app + envoy + mixer - behind a load balancer.
# Also exposes the service for ingress.
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: hello
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: hello
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      # INJECTED
      annotations:
        alpha.istio.io/sidecar: injected
        alpha.istio.io/version: costin@63c01578ebe6-stable-bc2b825-8-gfd1c0f3-fd1c0f3
        pod.beta.kubernetes.io/init-containers: '[{"args":["-p","15001","-u","1337", "-i", "10.0.0.0/8"],"image":"docker.io/istio/init:latest","imagePullPolicy":"Always","name":"init","securityContext":{"capabilities":{"add":["NET_ADMIN"]}}},{"args":["-c","sysctl
          -w kernel.core_pattern=/tmp/core.%e.%p.%t \u0026\u0026 ulimit -c unlimited"],"command":["/bin/sh"],"image":"alpine","imagePullPolicy":"Always","name":"enable-core-dump","securityContext":{"privileged":true}}]'
      creationTimestamp: null
      labels:
        app: hello
        tier: backend
        track: stable
    spec:
      containers:
      - image: gcr.io/google-samples/hello-go-gke:1.0
        imagePullPolicy: IfNotPresent
        name: app
        resources:
          requests:
            # defaults 100m ???
            cpu: "1"
            # 32 M ???
            memory: "1G"
          limits:
            cpu: "1"
            memory: "2G"
        ports:
        - containerPort: 80
        resources: {}
      # INJECTED - proxy image, entrypoint: manager
      - image: docker.io/istio/proxy:latest
        imagePullPolicy: Always
        args:
          - proxy
          - sidecar
          - -v
          - "2"
        resources:
          requests:
            # defaults 100m ???
            cpu: "1"
            # 32 M ???
            memory: "1G"
          limits:
            cpu: "1"
            memory: "2G"
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        #image: docker.io/istio/proxy:latest
        name: proxy
        resources: {}
        securityContext:
          runAsUser: 1337
      - image:  costinm/netdebug:latest
        imagePullPolicy: IfNotPresent
        name: debug
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
        securityContext:
          privileged: true
---
